=== librsvg 2.2.2 ===

2003-02-0   Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-paint-server.c: Fix evil devide by 0 bug that killed us on
	some Krystal SVGs
	* rsvg.c: update documentation - 95% complete (missing RsvgSizeFunc)
	* rsvg-gz.c: Ditto
	
2003-02-01  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c (end_element): Fix regression
	
2003-02-01  Dom Lachowicz <cinamod@hotmail.com>

	* docs/*: GtkDoc work. Please someone with better gtk-doc skills than
	me make this work 100% properly!
	
2003-02-01  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c (end_element): Fix regression caused by in_defs bogosity
	(start_linear_gradient): Proper handling of unspecified params
	(start_radial_gradient): Ditto
	
2003-01-31  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c, rsvg-shapes.c, rsvg-private.h: Some hacks to get around some
	nasty invalid KDE SVGs Uraeus presented me with. No longer crash.
	
2003-01-31  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-styles.c (parse_cssbuffer): Fix some overflows and such. All of
	the W3 testcases now load, albeit many do so incorrectly.
	/me hears a giant sucking sound made by CSS2
	
2003-01-31  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-file-util.c: Support SVGZ through the OLD API as well
	
2003-01-30  Dom Lachowicz <cinamod@hotmail.com>

	* gdk-pixbuf-loader/io-svg.c: Conditionally support SVGZ files
	* TODO: Remove SVGZ in pixbuf loader TODO-item
	* tests/104201.svg, tests/folder_home-2.2.svg, tests/stock_home.svg,
	tests/stock_paste.svg, tests/undo-128-d-sodipodi.svg.gz: New testcases
	
2003-01-30  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in, Makefile.am, librsvg-2.0.pc.in: Work by FJF and myself
	to conditionally build and install the libgsf-based GZip handle.
	Bump version number. Perhaps should branch as well.
	* rsvg-file-util.c: Export the new hidden _ex API calls
	* rsvg.h: Ditto
	
2003-01-30  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-file-util.c (*): Made '_ex' versions of all "convenience" 